sweet: parts: Add support for HBM and CABC
 * write preferences and qs tiles
 * kang icons from realmeparts
 * enable cabc by default
 * address sepolicy denials

Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: AtomicXZ <achubadyal4@gmail.com>
Signed-off-by: redcliff-op <devyashjangid@gmail.com>
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -67,12 +67,13 @@
     <string name="dirac_preset_dance">Dance</string>
     <string name="dirac_preset_metal">Metal</string>
 
-    <string name="dirac_hifi_enable_title"> Enable Hi-fi</string>
-    <string name="dirac_hifi_title">Hi-Fi</string>
-    <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string>
+    <!-- LCD Features -->
+    <string name="lcd_features_title">LCD features</string>
+    <string name="lcd_features_summary">High Brightness Mode, CABC</string>
+    <string name="lcd_hbm_title">High Brightness Mode (HBM)</string>
+    <string name="lcd_hbm_tile_title">HBM</string>
+    <string name="lcd_cabc_title">CABC Mode</string>
+    <string name="lcd_hbm_info">HBM (High Brightness Mode) increases the maximum brightness of the display to improve visibility under sunlight. Increases power consumption.</string>
+    <string name="lcd_cabc_info">CABC (Content Adaptive Backlight Control) adjusts display and backlight brightness based on currently shown content, to reduce power consumption without degradation.</string>
 
-    <!-- Clear Speaker -->
-    <string name="clear_speaker_title">Clear speaker</string>
-    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
-    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.</string>
 </resources>
