--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -16,8 +16,12 @@
     <string name="device_specific_settings_summary">Refresh rate configuration</string>
     <string name="device_min_refresh_rate">Minimum Refresh Rate</string>
     <string name="refresh_rate_tile_title">High Refresh Rate</string>
-    
+
+    <!-- Ambient settings -->
+    <string name="ambient_enable">Use ambient display</string>
+
     <!-- Dirac settings -->
+    <string name="dirac_enable">Enable dirac</string>
     <string name="dirac_title">Dirac sound enhancer</string>
     <string name="dirac_headset_title">Headset type</string>
     <string name="dirac_hifi_enable_title"> Enable Hi-fi</string>
